--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,10 @@ jobs:
         with:
           node-version: '14'
 
-      # Runs a single command using the runners shell
+      # Installs all node modules
       - name: Install Dependencies
         run: npm i
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Runs the build script
+      - name: Run the build script
         run: ./build.sh
