--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"private": true,
 	"license": "GPL-3.0-only",
-	"main": "build/electron.js",
+	"main": "src/electron.js",
 	"author": "Jack Humphries <me@jackhumphries.dev>",
 	"homepage": "./build/",
 	"description": "Group all of your socials into one window!",
@@ -19,7 +19,7 @@
 		"react-scripts": "^4.0.3"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"react": "react-scripts start",
 		"react-build": "react-scripts build",
 		"electron": "electron .",
 		"electron-pack": "electron-builder --dir",
