--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
 		"@fortawesome/react-fontawesome": "^0.1.14",
 		"electron-json-config": "^1.5.3",
 		"react": "^17.0.2",
+		"react-detect-offline": "^2.4.4",
 		"react-dom": "^17.0.2",
-		"react-scripts": "^4.0.3"
+		"react-scripts": "^4.0.3",
+		"react-toastify": "^7.0.4"
 	},
 	"scripts": {
 		"react": "react-scripts start",
