--- a/package.json
+++ b/package.json
@@ -31,24 +31,25 @@
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "2.2.0",
-    "@typescript-eslint/eslint-plugin": "4.31.2",
-    "@vitejs/plugin-vue": "1.9.0",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
     "cross-env": "7.0.3",
     "electron": "15.0.0",
     "electron-builder": "22.11.7",
     "electron-devtools-installer": "3.2.0",
-    "eslint": "7.32.0",
-    "eslint-plugin-vue": "7.18.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "lint-staged": "11.1.2",
     "playwright": "1.15.0",
     "simple-git-hooks": "2.6.1",
     "typescript": "4.4.2",
-    "vite": "2.5.10",
-    "vue-tsc": "0.3.0"
+    "vite": "2.5.10"
   },
   "dependencies": {
     "electron-updater": "4.6.0",
-    "vue": "3.2.13",
-    "vue-router": "4.0.11"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
