--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 indent_size = 4
-indent_style = space
+indent_style = tab
 
 [*.md]
 trim_trailing_whitespace = false
