--- a/package.json
+++ b/package.json
@@ -1,55 +1,53 @@
 {
-  "name": "vite-electron-builder",
-  "private": true,
-  "engines": {
-    "node": ">=v14.16",
-    "npm": ">=7.7"
-  },
-  "main": "packages/main/dist/index.cjs",
-  "scripts": {
-    "build": "node scripts/build.js",
-    "precompile": "cross-env MODE=production npm run build",
-    "compile": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
-    "pretest": "npm run build",
-    "test": "node tests/app.spec.js",
-    "watch": "node scripts/watch.js",
-    "lint": "eslint . --ext js,ts,vue",
-    "typecheck-main": "tsc --noEmit -p packages/main/tsconfig.json",
-    "typecheck-preload": "tsc --noEmit -p packages/preload/tsconfig.json",
-    "typecheck-renderer": "vue-tsc --noEmit -p packages/renderer/tsconfig.json",
-    "typecheck": "npm run typecheck-main && npm run typecheck-preload && npm run typecheck-renderer"
-  },
-  "browserslist": [
-    "Chrome 94"
-  ],
-  "simple-git-hooks": {
-    "pre-commit": "npx lint-staged",
-    "pre-push": "npm run typecheck"
-  },
-  "lint-staged": {
-    "*.{js,ts,vue}": "eslint --cache --fix"
-  },
-  "devDependencies": {
-    "@types/electron-devtools-installer": "2.2.0",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "cross-env": "7.0.3",
-    "electron": "15.0.0",
-    "electron-builder": "22.11.7",
-    "electron-devtools-installer": "3.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "lint-staged": "11.1.2",
-    "playwright": "1.15.0",
-    "simple-git-hooks": "2.6.1",
-    "typescript": "4.4.2",
-    "vite": "2.5.10"
-  },
-  "dependencies": {
-    "electron-updater": "4.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  }
+	"name": "vite-electron-builder",
+	"private": true,
+	"engines": {
+		"node": ">=v14.16",
+		"npm": ">=7.7"
+	},
+	"main": "packages/main/dist/index.cjs",
+	"scripts": {
+		"build": "node scripts/build.js",
+		"precompile": "cross-env MODE=production npm run build",
+		"compile": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
+		"watch": "node scripts/watch.js",
+		"lint": "eslint . --ext js,ts,tsx",
+		"typecheck-main": "tsc --noEmit -p packages/main/tsconfig.json",
+		"typecheck-preload": "tsc --noEmit -p packages/preload/tsconfig.json",
+		"typecheck-renderer": "vue-tsc --noEmit -p packages/renderer/tsconfig.json",
+		"typecheck": "npm run typecheck-main && npm run typecheck-preload && npm run typecheck-renderer"
+	},
+	"browserslist": [
+		"Chrome 94"
+	],
+	"simple-git-hooks": {
+		"pre-commit": "npx lint-staged",
+		"pre-push": "npm run typecheck"
+	},
+	"lint-staged": {
+		"*.{js,ts,tsx}": "eslint --cache --fix"
+	},
+	"devDependencies": {
+		"@types/electron-devtools-installer": "2.2.0",
+		"@types/react": "^17.0.24",
+		"@types/react-dom": "^17.0.9",
+		"@typescript-eslint/eslint-plugin": "^4.31.2",
+		"@typescript-eslint/parser": "^4.31.2",
+		"cross-env": "7.0.3",
+		"electron": "15.0.0",
+		"electron-builder": "22.11.7",
+		"electron-devtools-installer": "3.2.0",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"lint-staged": "11.1.2",
+		"playwright": "1.15.0",
+		"simple-git-hooks": "2.6.1",
+		"typescript": "4.4.2",
+		"vite": "2.5.10"
+	},
+	"dependencies": {
+		"electron-updater": "4.6.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2"
+	}
 }
